Nutch Change Log

Nutch Development Trunk

* NUTCH-806 Merge CrawlDBScanner with CrawlDBReader (jnioche)

* NUTCH-1587 misspelled property "threshold" in conf/log4j.properties (snagel)

* NUTCH-1604 ProtocolFactory not thread-safe (jnioche)

* NUTCH-1595 Upgrade to Tika 1.4 (jnioche, markus)

* NUTCH-1598 ElasticSearchIndexer to read ImmutableSettings from config (markus)

* NUTCH-1520 SegmentMerger looses records (markus)

* NUTCH-1602 improve the readability of metadata in readdb dump normal (lufeng)

* NUTCH-1596 HeadingsParseFilter not thread safe (snagel via markus)

* NUTCH-1597 HeadingsParseFilter to trim and remove exess whitespace (markus)

* NUTCH-1601 ElasticSearchIndexer fails to properly delete documents (markus)

* NUTCH-1600 Injector overwrite does not always work properly (markus)

* NUTCH-1581 CrawlDB csv output to include metadata (markus)

* NUTCH-1327 QueryStringNormalizer (markus)

* NUTCH-1593 Normalize option missing in SegmentMerger's usage (markus)

* NUTCH-1580 index-static returns object instead of value for index.static (Antoinette, lewismc, snagel)

* NUTCH-1126 JUnit test for urlfilter-prefix (Talat UYARER via markus)

Apache Nutch 1.7 Release - 06/20/2013 (mm/dd/yyyy)
Release report - http://s.apache.org/1zE

* NUTCH-1585 Ensure duplicate tags do not exist in microformat-reltag tag set. (lewismc)

* NUTCH-1583 Headings plugin to support multivalued headings (markus)

* NUTCH-1245 URL gone with 404 after db.fetch.interval.max stays db_unfetched in CrawlDb (snagel)

* NUTCH-1527 Elasticsearch indexer (lufeng + markus)

* NUTCH-1475 Index-More Plugin -- A better fall back value for date field (James Sullivan, snagel via lewismc)

* NUTCH-1560 index-metadata to add all values of multivalued metadata (snagel)

* NUTCH-1467 Not able to parse mutliValued metatags (kiran via snagel)

* NUTCH-1430 Freegenerator records overwrite CrawlDB records with AdaptiveFetchSchedule (markus)

* NUTCH-1522 Upgrade to Tika 1.3 (jnioche)
